fix(security): comprehensive backend audit fixes, payment idempotency, anti-IDOR protection, and test suite